# itmo-highload-bioinf

alignment/: main.py
alignment2/: main.py  nussin.py
clusterization/: .gitignore  main.ipynb  pyproject.toml
fastq/: .gitignore  main.py
mass-spectrometry/: .gitignore  main.py
reference/: main.py
